--- a/GiaoDien/flask_hdfs_app/app/templates/index.html
+++ b/GiaoDien/flask_hdfs_app/app/templates/index.html
@@ -32,7 +32,7 @@
             <th>Movie_Name</th>
             <th>Release_Year</th>
             <th>Metascore</th>
-            <th>Critic_Reviews</th>
+             <th>Average</th>
             <th>User_Score</th>
             <th>User_Ratings</th>
             <th>Duration_Minutes</th>
@@ -47,7 +47,7 @@
             <td>{{ r.Movie_Name }}</td>
             <td>{{ r.Release_Year }}</td>
             <td>{{ r.Metascore }}</td>
-            <td>{{ r.Critic_Reviews }}</td>
+            <td>{{ r.Average }}</td>
             <td>{{ r.User_Score }}</td>
             <td>{{ r.User_Ratings }}</td>
             <td>{{ r.Duration_Minutes }}</td>
