--- a/GiaoDien/flask_hdfs_app/app/templates/dashboard.html
+++ b/GiaoDien/flask_hdfs_app/app/templates/dashboard.html
@@ -32,22 +32,22 @@
         </section>
         
         <section class="chart-card">
-            <h2>Ten bieu do</h2>
+            <h2>So sánh điểm số Metacritic và IMDb</h2>
             {{ chart5|safe }}
         </section>
 
         <section class="chart-card">
-            <h2>Ten bieu do</h2>
+            <h2>So sánh tỉ lệ phim chất lượng cao theo năm (Metacritic vs IMDb)</h2>
             {{ chart6|safe }}
         </section>
 
         <section class="chart-card">
-            <h2>Ten bieu do</h2>
+            <h2>Biểu đồ cột so sánh Metascore</h2>
             {{ chart7|safe }}
         </section>
 
         <section class="chart-card">
-            <h2>Ten bieu do</h2>
+            <h2>Tỷ lệ điểm trung bình theo độ dài phim</h2>
             {{ chart8|safe }}
         </section>
     </main>
